test/library/standard/List/init/listInitUnboundedRange.good
listInitUnboundedRange.chpl:7: error: Cannot init list(int(64),false) from unbounded range(int(64),boundedLow,false)
